BoxFrame should only be the point target in the background layer, and should propagate background layer point requests to kids.  Bug 224013, r+sr=dbaron